--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.3.0",
         "sqrt-pro/db": "dev-master",
         "sqrt-pro/url": "dev-master",
-        "symfony/http-kernel": "~2.6"
+        "symfony/http-foundation": "~2.6"
     },
     "autoload": {
         "psr-0": {
