--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.3.0",
-        "sqrt-pro/db": "dev-master",
+        "sqrt-pro/db": "~0.0.1",
         "sqrt-pro/url": "dev-master",
         "symfony/http-foundation": "~2.6"
     },
